--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
+@charset "utf-8";
 /*-------- 全体のスタイル ------------------------------*/
-
 * {
   box-sizing: border-box;
 }
@@ -18,6 +18,7 @@ a:active {
     text-decoration: none;  
     color: #454545;  
 } 
+
 /* リストの点を消す */
 li {
   list-style: none;
