--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@ header {
 
 /* ------ハンバーガーメニュー -----------------------------*/
 
+/* メニューの背景部分 */
 #mask {
   width: 100%;
   height: 1800px;
@@ -64,6 +65,7 @@ header {
   z-index: 10;
 }
 
+/* 閉じる右向きマーク */
 .fa-angle-double-right {
   font-size: 56px;
   position: absolute;
@@ -71,6 +73,7 @@ header {
   color: #fff;
 }
 
+/* メニュー部分 */
 #menu_contents {
   background-color:#fff;
   position: absolute;
@@ -80,7 +83,7 @@ header {
   z-index: 11;
 }
 
-/* ログアウトボタン */
+/* メニュー内ログアウトボタン */
 #logout_btn {
   text-align: center;
   line-height:42px;
@@ -89,6 +92,19 @@ header {
   background-color: #006fbe;
   border-radius: 10px;
   color: #fff;
+}
+
+/* メニュー内プロフィール画像とユーザー名表示部分 */
+#my_acount {
+  margin: 32px auto;
+  text-align: center;
+}
+
+/* メニュー内プロフィール画像 */
+.profile_img {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
 }
 /* ----main.php トップ画面 ----------------------------------*/
 
